Restrict credential name character set
We need to keep allowing the full character set for GET and DELETE for
compatibility with existing credentials.

[Finishes #148681797] Credential names should only include alpha, numeric and hyphen/underscore characters

Signed-off-by: Isobel Redelmeier <iredelmeier@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -16,7 +16,6 @@ error.invalid_key_usage=The provided key usage ''{0}'' is not supported. Valid v
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
 error.invalid_key_length=The provided key length is not supported. Valid values include '2048', '3072' and '4096'.
-error.invalid_name_has_slash=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
 error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
 error.missing_certificate_credentials=At least one certificate attribute must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
@@ -41,5 +40,7 @@ error.interpolation.invalid_type=The credential ''{0}'' is not the expected type
 error.interpolation.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
+error.credential.invalid_character_in_name=Credential names may only include alpha, numeric, hyphen, underscore, and forward-slash characters. Please update and retry your request.
+error.credential.invalid_slash_in_name=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
 error.request_validation_test=Request body was validated and ControllerAdvice worked.
 error.oauth.invalid_issuer=The request token identity zone does not match the UAA server authorized by CredHub. Please validate that your request token was issued by the UAA server authorized by CredHub and retry your request.
