--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,6 +40,7 @@ error.interpolation.invalid_type=The credential ''{0}'' is not the expected type
 error.interpolation.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
+error.credential.invalid_certificate_parameter=The request could not be completed because the {0} is too long. The max length for {0} is {1} characters.
 error.credential.invalid_character_in_name=Credential names may only include alpha, numeric, hyphen, underscore, and forward-slash characters. Please update and retry your request.
 error.credential.invalid_slash_in_name=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
 error.request_validation_test=Request body was validated and ControllerAdvice worked.
