--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,7 +7,6 @@ error.cert_not_ca=The requested certificate cannot be signed by the given CA bec
 error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
 error.cannot_regenerate_non_generated_password=The password could not be regenerated because the value was statically set. Only generated passwords may be regenerated.
 error.cannot_regenerate_non_generated_certificate=The credential could not be regenerated because the certificate was statically set and is not self-signed or is invalid.
-error.credential_not_found=Credential not found. Please validate your input and retry your request.
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
@@ -35,11 +34,10 @@ error.acl.invalid_operation=The provided operation is not supported. Valid value
 error.acl.invalid_update_operation=Modification of access control for the authenticated user is not allowed. Please contact an administrator.
 error.acl.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
 error.acl.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
-error.acl.lacks_credential_write=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
 error.interpolation.invalid_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
-error.interpolation.invalid_access=The request could not be completed because a reference credential could not be accessed. Please update and retry your request.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
+error.credential.invalid_access=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
 error.credential.invalid_certificate_parameter=The request could not be completed because the {0} is too long. The max length for {0} is {1} characters.
 error.credential.invalid_character_in_name=Credential names may only include alpha, numeric, hyphen, underscore, and forward-slash characters. Please update and retry your request.
 error.credential.invalid_slash_in_name=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
