--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,6 +6,7 @@ error.ca_not_found=The request could not be completed because the requested CA c
 error.cert_not_ca=The requested certificate cannot be signed by the given CA because the given CA is not a certificate authority. A certificate must contain the extension 'Certificate Authority: YES' to be used to sign other certificates.
 error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
 error.cannot_regenerate_non_generated_password=The password could not be regenerated because the value was statically set. Only generated passwords may be regenerated.
+error.cannot_regenerate_non_generated_user=The user could not be regenerated because the value was statically set. Only generated users may be regenerated.
 error.cannot_regenerate_non_generated_certificate=The credential could not be regenerated because the certificate was statically set and is not self-signed or is invalid.
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
@@ -26,7 +27,7 @@ error.missing_value=A non-empty value must be specified for the credential. Plea
 error.cannot_generate_type=Credentials of this type cannot be generated. Please adjust the credential type and retry your request.
 error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
-error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'certificate', 'ssh' and 'rsa'.
+error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
