--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,5 @@
 error.bad_request=The request could not be fulfilled because the request path or body did not meet expectation. Please check the documentation for required formatting and retry your request.
+error.internal_server_error=An application error occurred. Please contact your CredHub administrator.
 error.missing_query_parameter=The query parameter {0} is required for this request.
 error.invalid_query_parameter=The query parameter {0} was not valid for this request.
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
