bulk-regenerate returns 400 if signed_by is missing
[#150938664] Non-handled exceptions shouldn't leak information

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,6 +7,7 @@ error.ca_and_self_sign=The parameters 'ca' and 'self-sign' cannot be used in com
 error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
 error.cert_not_ca=The requested certificate cannot be signed by the given CA because the given CA is not a certificate authority. A certificate must contain the extension 'Certificate Authority: YES' to be used to sign other certificates.
 error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
+error.missing_signed_by=You must specify a signing CA. Please update and retry your request.
 error.cannot_regenerate_non_generated_password=The password could not be regenerated because the value was statically set. Only generated passwords may be regenerated.
 error.cannot_regenerate_non_generated_user=The user could not be regenerated because the value was statically set. Only generated users may be regenerated.
 error.cannot_regenerate_non_generated_certificate=The credential could not be regenerated because the certificate was statically set and is not self-signed or is invalid.
