--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,8 +4,8 @@ error.missing_query_parameter=The query parameter {0} is required for this reque
 error.invalid_query_parameter=The query parameter {0} was not valid for this request.
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
 error.ca_and_self_sign=The parameters 'ca' and 'self-sign' cannot be used in combination. Please update and retry your request.
-error.ca_not_found=The request could not be completed because the requested CA certificate could not be found. Please retry your request.
 error.cert_not_ca=The requested certificate cannot be signed by the given CA because the given CA is not a certificate authority. A certificate must contain the extension 'Certificate Authority: YES' to be used to sign other certificates.
+error.not_a_ca_name=The name given for the CA does not reference a CA type credential.
 error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
 error.missing_signed_by=You must specify a signing CA. Please update and retry your request.
 error.cannot_regenerate_non_generated_password=The password could not be regenerated because the value was statically set. Only generated passwords may be regenerated.
