Return error when overwrite and mode are both provided
[#151112147] User should receive error if overwrite=true and mode is defined

Signed-off-by: Ashwin Venkatesh <avenkatesh@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,6 +31,7 @@ error.cannot_generate_type=Credentials of this type cannot be generated. Please 
 error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
+error.overwrite_and_mode_both_provided=The parameters overwrite and mode cannot be combined. Please update and retry your request.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
