Return error when generating certificate signed by CA with missing key
[#152554252] Generation fails for Certificate credentials with null pointer exception when the certificate does not have a private key

Signed-off-by: Danny Sullivan <dsullivan@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ error.cert_not_ca=The requested certificate cannot be signed by the given CA bec
 error.not_a_ca_name=The name given for the CA does not reference a CA type credential.
 error.missing_signing_ca=You must specify a signing CA or indicate self-signing when generating a certificate. Please update and retry your request.
 error.missing_signed_by=You must specify a signing CA. Please update and retry your request.
+error.ca_missing_private_key=The specified CA object does not have an associated private key.
 error.cannot_regenerate_non_generated_password=The password could not be regenerated because the value was statically set. Only generated passwords may be regenerated.
 error.cannot_regenerate_non_generated_user=The user could not be regenerated because the value was statically set. Only generated users may be regenerated.
 error.cannot_regenerate_non_generated_certificate=The credential could not be regenerated because the certificate was statically set and is not self-signed or is invalid.
