--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -34,6 +34,7 @@ error.invalid_type_with_generate_prompt=The request does not include a valid typ
 error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.overwrite_and_mode_both_provided=The parameters overwrite and mode cannot be combined. Please update and retry your request.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
+error.too_many_transitional_versions=The maximum number of transitional versions for a given CA is 1.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
 error.resource_not_found=The request could not be fulfilled because the resource could not be found.
 error.permission.invalid_operation=The provided operation is not supported. Valid values include read, write, delete, read_acl, and write_acl.
