Return validation error when set certificate value is invalid
[#152598792] CredHub rejects invalid certificate values

Signed-off-by: Ashwin Venkatesh <avenkatesh@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ error.cannot_regenerate_non_generated_certificate=The credential could not be re
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
+error.invalid_certificate_value=The provided certificate value is not a valid X509 certificate.
 error.invalid_extended_key_usage=The provided extended key usage ''{0}'' is not supported. Valid values include 'client_auth', 'server_auth', 'code_signing', 'email_protection' and 'timestamping'.
 error.invalid_key_usage=The provided key usage ''{0}'' is not supported. Valid values include 'digital_signature', 'non_repudiation', 'key_encipherment', 'data_encipherment', 'key_agreement', 'key_cert_sign', 'crl_sign', 'encipher_only' and 'decipher_only'.
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
