Reject invalid CA values
[#152649876] CredHub rejects invalid CA values

Signed-off-by: Danny Sullivan <dsullivan@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -15,6 +15,7 @@ error.cannot_regenerate_non_generated_certificate=The credential could not be re
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
+error.invalid_ca_value=The provided CA value is not a valid X509 certificate authority.
 error.invalid_certificate_length=The provided certificate value is too long. Certificate lengths must be less than 7000 characters.
 error.invalid_certificate_value=The provided certificate value is not a valid X509 certificate.
 error.invalid_extended_key_usage=The provided extended key usage ''{0}'' is not supported. Valid values include 'client_auth', 'server_auth', 'code_signing', 'email_protection' and 'timestamping'.
