change GET request to /data for certificates
   return latest active + transitional certificate versions when
   current=true

[/#153588782] current=true returns latest non-transitional cert and any transitional cert present

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 error.bad_request=The request could not be fulfilled because the request path or body did not meet expectation. Please check the documentation for required formatting and retry your request.
 error.internal_server_error=An application error occurred. Please contact your CredHub administrator.
+error.cant_use_versions_and_current=The query parameters current and versions cannot be provided in the same request.
 error.missing_query_parameter=The query parameter {0} is required for this request.
 error.invalid_query_parameter=The query parameter {0} was not valid for this request.
 error.audit_save_failure=The request could not be completed. Please contact your system administrator to resolve this issue.
