Allow users to delete specific certificate versions
[#153589197] Users can delete Certificate versions from RESTful endpoint

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -51,6 +51,7 @@ error.permission.missing_operations=At least one operation must be provided. Ple
 error.interpolation.invalid_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
+error.credential.cannot_delete_last_version=The minimum number of versions for a Certificate is 1.
 error.credential.invalid_access=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
 error.credential.invalid_certificate_parameter=The request could not be completed because the {0} is too long. The max length for {0} is {1} characters.
 error.credential.invalid_character_in_name=Credential names may only include alpha, numeric, hyphen, underscore, and forward-slash characters. Please update and retry your request.
