Allow users to update transitional version of a certificate credential
[#153736246] Users can move the "transitional" tag across existing Certificate versions

Signed-off-by: Ashwin Venkatesh <avenkatesh@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -53,6 +53,7 @@ error.auth.invalid_mtls_identity=The provided authentication mechanism does not 
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
 error.credential.cannot_delete_last_version=The minimum number of versions for a Certificate is 1.
 error.credential.invalid_access=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
+error.credential.mismatched_credential_and_version=The request could not be completed because the specified version does not exist or does not belong to the specified credential.
 error.credential.invalid_certificate_parameter=The request could not be completed because the {0} is too long. The max length for {0} is {1} characters.
 error.credential.invalid_character_in_name=Credential names may only include alpha, numeric, hyphen, underscore, and forward-slash characters. Please update and retry your request.
 error.credential.invalid_slash_in_name=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
