--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,6 +17,7 @@ error.cannot_regenerate_non_generated_user=The user could not be regenerated bec
 error.cannot_regenerate_non_generated_certificate=The credential could not be regenerated because the certificate was statically set and is not self-signed or is invalid.
 error.excludes_all_charsets=The combination of parameters in the request is not allowed. Please validate your input and retry your request.
 error.insufficient_hex_alpha=Password must contain at least 1 characters from A-F.
+error.name_has_too_many_characters=The request could not be completed. The credential name cannot exceed 1024 characters
 error.invalid_alternate_name=A provided alternative name is not a valid hostname or IP address. Please update this value and retry your request.
 error.invalid_ca_value=The provided CA value is not a valid X509 certificate authority.
 error.invalid_certificate_length=The provided certificate value is too long. Certificate lengths must be less than 7000 characters.
