Continue to serve requests on all GET methods during BBR backup
[#156505422] CredHub continues to serve "info," "version," and "interpolate" requests during a BBR backup

Signed-off-by: Guillermo Kardolus <gkardolus@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -27,6 +27,7 @@ error.invalid_key_usage=The provided key usage ''{0}'' is not supported. Valid v
 error.invalid_duration=Invalid duration specified. The supported duration values are whole numbers between 1-3650.
 error.invalid_json_key=The request includes an unrecognized parameter ''{0}''. Please update or remove this parameter and retry your request.
 error.invalid_key_length=The provided key length is not supported. Valid values include '2048', '3072' and '4096'.
+error.invalid_remote_address=The request was send from an invalid IP address.
 error.invalid_token_signature=The request token signature could not be verified. Please validate that your request token was issued by the UAA server authorized by CredHub.
 error.invalid_key_format=The provided key format is not supported. Keys must be PEM-encoded PKCS#1 keys.
 error.invalid_content_type=The provided content type is not supported
@@ -46,6 +47,7 @@ error.overwrite_and_mode_both_provided=The parameters overwrite and mode cannot 
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.too_many_transitional_versions=The maximum number of transitional versions for a given CA is 1.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
+error.read_only_mode=Service Unavailable. Credhub is currently in read only mode.
 error.resource_not_found=The request could not be completed because the credential does not exist or you do not have sufficient authorization.
 error.permission.invalid_operation=The provided operation is not supported. Valid values include read, write, delete, read_acl, and write_acl.
 error.permission.invalid_update_operation=Modification of access control for the authenticated user is not allowed. Please contact an administrator.
