--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -45,6 +45,8 @@ error.invalid_type_with_set_prompt=The request does not include a valid type. Va
 error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.overwrite_and_mode_both_provided=The parameters overwrite and mode cannot be combined. Please update and retry your request.
+error.overwrite_provided_on_put=Invalid parameter: overwrite. Please update and retry your request.
+error.mode_provided_on_put=Invalid parameter: mode. Please update and retry your request.
 error.type_mismatch=The credential type cannot be modified. Please delete the credential if you wish to create it with a different type.
 error.too_many_transitional_versions=The maximum number of transitional versions for a given CA is 1.
 error.missing_encryption_key=The credential could not be accessed with the provided encryption keys. You must update your deployment configuration to continue.
