--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,6 +56,8 @@ error.permission.invalid_operation=The provided operation is not supported. Vali
 error.permission.invalid_update_operation=Modification of access control for the authenticated user is not allowed. Please contact an administrator.
 error.permission.missing_aces=At least one access control entry must be provided. Please validate your input and retry your request.
 error.permission.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
+error.permission.missing_actor=You must specify an actor. Please validate your input and retry your request.
+error.permission.missing_path=You must specify a path. Please validate your input and retry your request.
 error.interpolation.invalid_type=The credential ''{0}'' is not the expected type. A credhub-ref credential must be of type ''JSON''.
 error.auth.invalid_mtls_identity=The provided authentication mechanism does not provide a valid identity. Please contact your system administrator.
 error.auth.mtls_not_client_auth=The provided certificate is not authorized to be used for client authentication.
