--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -69,3 +69,7 @@ error.credential.invalid_character_in_name=Credential names may only include alp
 error.credential.invalid_slash_in_name=A credential name cannot end with a '/' character or contain '//'. Credential names should be in the form of /[path]/[name] or [path]/[name]. Please update and retry your request.
 error.oauth.invalid_issuer=The request token identity zone does not match the UAA server authorized by CredHub. Please validate that your request token was issued by the UAA server authorized by CredHub and retry your request.
 error.oauth.insufficient_scope=The authenticated user does not have the required scopes to perform that action. Please update the client to include credhub.read and credhub.write then retry your request.
+error.permission.missing_path=A credential path must be provided. Please validate your input and retry your request.
+error.permission.missing_actor=An actor must be provided. Please validate your input and retry your request.
+error.permission.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
+error.permission.already_exists=This permission entry for this actor already exits.
