Add endpoint to retrieve permissions by guid
[#157756262] Operators can show existing permissions directly

Signed-off-by: Chhavi Kankaria <ckankaria@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,6 +44,7 @@ error.cannot_generate_type=Credentials of this type cannot be generated. Please 
 error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
+error.invalid_permission=You do not have the required permission to perform this operation.
 error.overwrite_and_mode_both_provided=The parameters overwrite and mode cannot be combined. Please update and retry your request.
 error.overwrite_provided_on_put=Invalid parameter: overwrite. Please update and retry your request.
 error.mode_provided_on_put=Invalid parameter: mode. Please update and retry your request.
