--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -75,3 +75,4 @@ error.permission.missing_actor=An actor must be provided. Please validate your i
 error.permission.missing_operations=At least one operation must be provided. Please validate your input and retry your request.
 error.permission.already_exists=A permission entry for this actor and path already exists. Please use PUT to update the permission entry. 
 error.permission.does_not_exist=The request includes a permission that does not exist.
+error.permission.wrong_path_and_actor=The permission guid does not match the provided actor and path.
