Throw 400 when no parameters are specified when generating a certificate
- Audit log request details when a request is invalid

[#159527168] Certificate Endpoint throws a 500 when Parameters are omitted

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,6 +36,7 @@ error.invalid_content_type=The provided content type is not supported
 error.mismatched_certificate_and_private_key=The provided certificate does not match the private key.
 error.missing_certificate_credentials=At least one certificate attribute must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
+error.no_certificate_parameters=This request must include a value for 'parameters'.
 error.mixed_ca_name_and_ca=Only one of the values 'ca_name' and 'ca' may be provided. Please update and retry your request.
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_password=A password value must be specified for the credential. Please validate and retry your request.
