--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -37,6 +37,9 @@ error.mismatched_certificate_and_private_key=The provided certificate does not m
 error.missing_certificate_credentials=At least one certificate attribute must be set. Please validate your input and retry your request.
 error.missing_certificate_parameters=At least one subject value, such as common name or organization, must be defined to generate the certificate. Please update and retry your request.
 error.no_certificate_parameters=This request must include a value for 'parameters'.
+error.unreadable_certificate=Unable to parse the certificate.
+error.invalid_certificate=The provided certificate is not valid.
+error.missing_certificate=You must provide a certificate.
 error.mixed_ca_name_and_ca=Only one of the values 'ca_name' and 'ca' may be provided. Please update and retry your request.
 error.missing_name=A credential name must be provided. Please validate your input and retry your request.
 error.missing_password=A password value must be specified for the credential. Please validate and retry your request.
