Display helpful error message for malformed private key
[#155030791]

Signed-off-by: Walter Scarborough <wscarborough@pivotal.io>

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -40,6 +40,7 @@ error.invalid_token_signature=The request token signature could not be verified.
 error.invalid_type_with_generate_prompt=The request does not include a valid type. Valid values for generate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_regenerate_prompt=The request does not include a valid type. Valid values for regenerate include 'password', 'user', 'certificate', 'ssh' and 'rsa'.
 error.invalid_type_with_set_prompt=The request does not include a valid type. Valid values include 'value', 'json', 'password', 'user', 'certificate', 'ssh' and 'rsa'.
+error.malformed_private_key=Private key is malformed.
 error.malformed_token=The request token is malformed. Please validate that your request token was issued by the UAA server authorized by CredHub.
 error.mismatched_certificate_and_private_key=The provided certificate does not match the private key.
 error.missing_certificate=You must provide a certificate.
