--- a/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
+++ b/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
@@ -39,8 +39,53 @@ operation::DELETE__permissions_by_uuid__returns_a_permission[]
 
 == Credentials
 
-=== Find a Credential by Path
-operation::GET__find_by_path_returns__results[]
+=== Find a Credential by Name
+operation::GET__find_by_name__returns_results[]
+
+---
+
+=== Find a Credential by ID (Type: Value)
+operation::GET__find_by_id__returns_value_results[]
+
+---
+
+=== Find a Credential by ID (Type: JSON)
+operation::GET__find_by_id__returns_json_results[]
+
+---
+
+=== Find a Credential by ID (Type: Password)
+operation::GET__find_by_id__returns_password_results[]
+
+---
+
+=== Find a Credential by ID (Type: User)
+operation::GET__find_by_id__returns_user_results[]
+
+---
+
+=== Find a Credential by ID (Type: Certificate)
+operation::GET__find_by_id__returns_certificate_results[]
+
+---
+
+=== Find a Credential by ID (Type: RSA)
+operation::GET__find_by_id__returns_rsa_results[]
+
+---
+
+=== Find a Credential by ID (Type: SSH)
+operation::GET__find_by_id__returns_ssh_results[]
+
+---
+
+=== Find a Credential by Name-Like
+operation::GET__find_by_name_like__returns_results[]
+
+---
+
+=== Get a Credential by Name
+operation::GET__get_by_name__returns_results[]
 
 ---
 
@@ -69,5 +114,40 @@ operation::POST__generate_ssh_returns__ssh_credential[]
 
 ---
 
+=== Set a JSON Credential
+operation::PUT__set_json_credential_returns__json_credential[]
+
+---
+
+=== Set a Certificate Credential
+operation::PUT__set_certificate_credential_returns__certificate_credential[]
+
+---
+
+=== Set a Password Credential
+operation::PUT__set_password_credential_returns__password_credential[]
+
+---
+
+=== Set a RSA Credential
+operation::PUT__set_rsa_credential_returns__rsa_credential[]
+
+---
+
+=== Set a SSH Credential
+operation::PUT__set_ssh_credential_returns__ssh_credential[]
+
+---
+
+=== Set a User Credential
+operation::PUT__set_user_credential_returns__user_credential[]
+
+---
+
 === Set a Value Credential
 operation::PUT__set_value_credential_returns__value_credential[]
+
+---
+
+=== Delete a Credential
+operation::DELETE__credential_returns__void[]
