add autodocs for HealthController
- also rename generate package to regenerate

Co-authored-by: Tom Kennedy <tkennedy@pivotal.io>

--- a/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
+++ b/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
@@ -245,3 +245,9 @@ operation::POST__regenerate__returns_results[]
 === Bulk Regenerate Credentials
 operation::POST__bulkregenerate__returns_results[]
 
+---
+
+== Health
+
+=== Get Server Status
+operation::GET__health__returns_status[]
