--- a/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
+++ b/backends/credhub/src/docs/asciidoc/credhub-autodoc-base-template.adoc
@@ -7,35 +7,54 @@
 
 = CredHub API
 
-== Permissions
+== Permissions V2
 
-=== Get a Permission by Actor and Path
-operation::GET__permissions_by_actor_and_path__returns_a_permission[]
-
----
-
-=== Get a Permission by UUID
-operation::GET__permissions_by_uuid__returns_a_permission[]
+=== Get a V2 Permission by Actor and Path
+operation::GET__permissions_v2_by_actor_and_path__returns_a_permission[]
 
 ---
 
-=== Create a Permission
-operation::POST__permissions__returns_a_permission[]
+=== Get a V2 Permission by UUID
+operation::GET__permissions_v2_by_uuid__returns_a_permission[]
 
 ---
 
-=== Update a Permission
-operation::PUT__permissions__returns_a_permission[]
+=== Create a V2 Permission
+operation::POST__permissions_v2__returns_a_permission[]
 
 ---
 
-=== Update a Permission Operation
-operation::PATCH__permissions__returns_a_permission[]
+=== Update a V2 Permission
+operation::PUT__permissions_v2__returns_a_permission[]
 
 ---
 
-=== Delete a Permission
-operation::DELETE__permissions_by_uuid__returns_a_permission[]
+=== Update a V2 Permission Operation
+operation::PATCH__permissions_v2__returns_a_permission[]
+
+---
+
+=== Delete a V2 Permission
+operation::DELETE__permissions_v2_by_uuid__returns_a_permission[]
+
+---
+
+== Permissions V1 (Deprecated)
+
+=== Get a V1 Permission by Actor and Path
+operation::GET__permissions_v1__returns_permissions[]
+
+---
+
+=== Create a V1 Permission
+operation::POST__permissions_v1__returns_201[]
+
+---
+
+=== Delete a V1 Permission
+operation::DELETE__permission_v1__returns_204[]
+
+---
 
 == Credentials
 
